Make sure unhelpful surveys don't overflow the DB
* Add tests that check for this condition.
* Truncate the incoming surveys when they are doing long, by reducing
  the survey field.
* Add a hard limit and a character counter to the user interface for
  unhelpful surveys.

--- a/media/css/wiki.css
+++ b/media/css/wiki.css
@@ -367,6 +367,10 @@ html[lang="ja"] #more-help div.support-search input.text {
     margin: 6px 14px;
 }
 
+#unhelpful-survey .character-counter {
+    font-size: 10px;
+}
+
 /* New / Edit / Translate Document */
 #document-form form {
     padding: 0 0 20px;
